# object-based-navigation

./: README.md
object_segmentation_agiprobot/: CMakeLists.txt  README.md
object_segmentation_agiprobot/include/: MapObject.h  ObjectDetector.h  Parameters.h  matrix_utils.h
object_segmentation_agiprobot/src/: MapObject.cc  ObjectDetector.cc  Parameters.cc  main_object_seg_node.cpp  main_show_hypermap_node.cpp  test_node.cpp
object_segmentation_ws/src/agv_control/: CMakeLists.txt  package.xml
object_segmentation_ws/src/agv_control/config/: station_poses.yaml
object_segmentation_ws/src/agv_control/launch/: agv_control.launch
object_segmentation_ws/src/agv_control/scripts/: agv_control.py  coarse_to_fine_server.py
object_segmentation_ws/src/azure_kinect_capture_framework/: CMakeLists.txt  package.xml
object_segmentation_ws/src/azure_kinect_capture_framework/launch/: example.launch
object_segmentation_ws/src/azure_kinect_capture_framework/scripts/: example.py
object_segmentation_ws/src/karispro_msgs/: CMakeLists.txt  package.xml
object_segmentation_ws/src/karispro_msgs/action/: FinePosNav.action
object_segmentation_ws/src/laser_line_extraction/: CMakeLists.txt
object_segmentation_ws/src/laser_line_extraction/include/laser_line_extraction/: line_extraction_ros.h
object_segmentation_ws/src/laser_line_extraction/launch/: debug.launch  show_line_and_conveyor.launch
object_segmentation_ws/src/laser_line_extraction/msg/: LineSegment.msg
object_segmentation_ws/src/laser_line_extraction/src/: line_extraction_ros.cpp
object_segmentation_ws/src/object_segmentation/: CMakeLists.txt  LICENSE  README.md  package.xml
object_segmentation_ws/src/object_segmentation/config/: config.yaml  gt_obj.txt  result_obj.txt
object_segmentation_ws/src/object_segmentation/include/: MapObject.h  ObjectDetector.h  matrix_utils.h
object_segmentation_ws/src/object_segmentation/launch/: debug.launch  show_hyper_map.launch
object_segmentation_ws/src/object_segmentation/rviz/: debug.rviz  hypermap.rviz
object_segmentation_ws/src/object_segmentation/src/: MapObject.cc  ObjectDetector.cc  main_show_hypermap_node.cc  object_seg_node.cc
